--- a/circle.yml
+++ b/circle.yml
@@ -10,4 +10,4 @@ deployment:
     commands:
       - aws s3 sync /home/ubuntu/S3ContinuousDeploy s3://decanter-circleci-test --delete
   post:
-      - URL='http://decanter-circleci-testing.s3-website-us-east-1.amazonaws.com/' yslow_score=2 pagespeed_score=3 node /home/ubuntu/S3ContinuousDeploy/script/gtmetrix.js 
+      - URL='http://decanter-circleci-testing.s3-website-us-east-1.amazonaws.com/' yslow_score=2 pagespeed_score=3 node ./script/gtmetrixExe.js 
