modifying gtmetrix and adding lighthouse

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": false,
   "dependencies": {
-    "gtmetrix": "^1.2.3"
+    "gtmetrix": "^1.2.3",
+    "lighthouse": "^2.1.0"
   }
 }
