--- a/circle.yml
+++ b/circle.yml
@@ -8,13 +8,13 @@ dependencies:
       - sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
       - sudo apt-get update
       - sudo apt-get install google-chrome-stable
-      - /usr/bin/google-chrome --version
 deployment:
   prod:
     branch: master
     commands:
       - aws s3 sync /home/ubuntu/S3ContinuousDeploy s3://decanter-circleci-test --delete
 test:
+  post:
       - node ./script/gtmetrixExe.js
         environment:
           URL: 'http://decanter-circleci-testing.s3-website-us-east-1.amazonaws.com/'
