--- a/circle.yml
+++ b/circle.yml
@@ -15,9 +15,5 @@ deployment:
       - aws s3 sync /home/ubuntu/S3ContinuousDeploy s3://decanter-circleci-test --delete
 test:
   post:
-      - node ./script/gtmetrixExe.js
-        environment:
-          URL: 'http://decanter-circleci-testing.s3-website-us-east-1.amazonaws.com/'
-          yslow_score: 8
-          pagespeed_score: 9
+      - node ./script/gtmetrixExe.js URL='http://decanter-circleci-testing.s3-website-us-east-1.amazonaws.com/' yslow_score=8 pagespeed_score=9
 
