--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,7 @@ dependencies:
       - echo 'dependencies installed'
 deployment:
   stage:
+    commands:
       - aws s3 sync /home/ubuntu/S3ContinuousDeploy s3://decanter-circleci-test --delete
       - echo 'project deployed'
 test:
