added branch name

--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,8 @@ dependencies:
       - sudo apt-get install google-chrome-stable
       - echo 'dependencies installed'
 deployment:
-  stage:
+  staging:
+    branch: /*/
     commands:
       - aws s3 sync /home/ubuntu/S3ContinuousDeploy s3://decanter-circleci-test --delete
       - echo 'project deployed'
