added branch quick fix 2

--- a/circle.yml
+++ b/circle.yml
@@ -9,13 +9,10 @@ dependencies:
       - sudo apt-get update
       - sudo apt-get install google-chrome-stable
       - echo 'dependencies installed'
-deployment:
-  staging:
-    branch: /^(?!master$).*$/
+test:
+  pre:
     commands:
       - aws s3 sync /home/ubuntu/S3ContinuousDeploy s3://decanter-circleci-test --delete
-      - echo 'project deployed'
-test:
   post:
       - node ./script/gtmetrixExe.js URL='http://decanter-circleci-testing.s3-website-us-east-1.amazonaws.com/' yslow_score=8 pagespeed_score=9
       - echo 'tesing completed'
