save output in html file

--- a/circle.yml
+++ b/circle.yml
@@ -14,5 +14,5 @@ test:
       - aws s3 sync /home/ubuntu/S3ContinuousDeploy s3://decanter-circleci-testing --delete
   post:
       - URL='http://decanter-circleci-testing.s3-website-us-east-1.amazonaws.com/' yslow_score=8 pagespeed_score=9 node ./script/gtmetrixExe.js 
-      - URL='http://decanter-circleci-testing.s3-website-us-east-1.amazonaws.com/' node ./script/lighthouse.js
+      - URL='http://decanter-circleci-testing.s3-website-us-east-1.amazonaws.com/' node ./script/lighthouse.js > report.html
       - echo 'tesing completed'
