circle.yml modified

--- a/circle.yml
+++ b/circle.yml
@@ -15,5 +15,5 @@ test:
   post:
       - URL='http://decanter-circleci-testing.s3-website-us-east-1.amazonaws.com/' yslow_score=8 pagespeed_score=9 node ./script/gtmetrixExe.js 
       - URL='http://decanter-circleci-testing.s3-website-us-east-1.amazonaws.com/' node ./script/lighthouse.js > report.html
-      - owner=$CIRCLE_USERNAME repo=$CIRCLE_PROJECT_REPONAME PR=$CI_PULL_REQUEST node github.js
+      - owner=CIRCLE_USERNAME repo=CIRCLE_PROJECT_REPONAME PR=CI_PULL_REQUEST node github.js
       - echo 'tesing completed'
